# rs-plugin-host

./: Cargo.toml  LICENSE  README.md
allocator/: Cargo.toml
allocator/src/: lib.rs
api/: Cargo.toml
api/src/: allocator.rs  lib.rs  plugin.rs
host/: Cargo.toml
host/src/: allocator.rs  lib.rs  main.rs  plugin.rs  tag_registry.rs
plugins/counter/: Cargo.toml
plugins/decrement/: Cargo.toml
plugins/increment/: Cargo.toml
plugins/increment/src/: lib.rs
tag_registry/: Cargo.toml
tag_registry/src/: lib.rs
